# whoopnet

./: .gitignore  README.md  package.xml  requirements.txt  setup.py
calibrate/: generate_fisheye_mask.py
extras/streamlit/: streamlit_base.py  streamlit_deeplabv3_cityscape.py  streamlit_midas.py  streamlit_moge.py  streamlit_opticalflow.py  streamlit_shi_tamasi.py  streamlit_shi_tamasi_w_tracking.py  streamlit_ultralytics_yolo.py  streamlit_zoedepth.py
launch/: interface_launch.py
src/interface/: fpv_interface.py  fpv_node.py  fpv_video.py
src/io/: fpv_interface.py  fpv_manual_control.py  fpv_node.py  fpv_video.py  whoopnet_camera.py  whoopnet_camera_node.py  whoopnet_camera_ros.py  whoopnet_io.py  whoopnet_io_node.py  whoopnet_io_ros.py  whoopnet_manual_control.py  whoopnet_node.py  whoopnet_rc_mixer.py  whoopnet_ros_interface.py
src/io/cal/: hdzero_eco_960x720_cb_0_67px_reprojecterr.json  hdzero_eco_960x720_cb_6px_reprojecterr.json
src/perception/: example_zoedepth.py  midas.py  yolov11.py  zoedepth.py
src/perception/vins-mono/: README.md
src/perception/vins-mono/camera_model/: CMakeLists.txt  package.xml
src/perception/vins-mono/feature_tracker/: CMakeLists.txt  package.xml
src/perception/vins-mono/feature_tracker/launch/: track.launch
src/perception/vins-mono/feature_tracker/src/: feature_tracker.cpp  feature_tracker.h  feature_tracker_node.cpp  parameters.cpp  parameters.h
src/perception/vins-mono/pose_graph/: CMakeLists.txt  package.xml
src/perception/vins-mono/pose_graph/src/: keyframe.cpp  keyframe.h  pose_graph.cpp  pose_graph.h  pose_graph_node.cpp
src/perception/vins-mono/pose_graph/src/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h  utility.h
src/perception/vins-mono/vins_estimator/: CMakeLists.txt  package.xml
src/perception/vins-mono/vins_estimator/config/hdzero/: mobula6_config.yaml
src/perception/vins-mono/vins_estimator/launch/: hdz_mobula6.launch
src/perception/vins-mono/vins_estimator/src/: estimator.cpp  estimator.h  estimator_node.cpp  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
src/perception/vins-mono/vins_estimator/src/factor/: imu_factor.h  integration_base.h  marginalization_factor.cpp  marginalization_factor.h  projection_td_factor.h
src/perception/vins-mono/vins_estimator/src/initial/: initial_aligment.cpp  initial_ex_rotation.cpp  initial_ex_rotation.h  solve_5pts.h
src/perception/vins-mono/vins_estimator/src/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h  utility.h  visualization.cpp  visualization.h
tools/: capture_cont_images.py  capture_video.py  fpv_extract_fc_timestamp.py  restart_state_estimator.py
